--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,11 +11,11 @@ header {
     font-family: var(--font);
     background-color: darkcyan;
     color: white;
-    margin: 0px;
 }
 
 h1 {
     display: inline;
+    font-size: 30px;
 }
 
 nav {
@@ -27,9 +27,11 @@ a {
     vertical-align: middle;
     display: inline;
     flex-wrap: wrap;  
-    margin-right: 20px;
+    margin: 20px;
     flex-direction: column;
-    
+    font-size: 15px;
+    text-decoration: none;
+    color: white;
 }
 
 body {
@@ -61,48 +63,69 @@ img {
 
 main {
     display: grid;
-    grid-template-columns: repeat(3, 2fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(5, 2fr);
+    grid-template-rows: repeat(6, 1fr);
     margin: 10px;
     color: rgb(5, 51, 79);
 }
 
-#about-me {
-    grid-area: 1 / 1 / 2 / 2;
+.subsection {
     text-align: right;
     vertical-align: middle;
-    margin: 20px;
+    margin: 10px 20px;
     padding: 20px;
     border-right: solid;
     border-right-color: rgb(5, 51, 79);
+    font-size: 20px;
+}
+
+#about-me {
+    grid-area: 1 / 1 / 2 / 2;
 }
 
 #about-me-text {
-    grid-area: 1 / 2 / 2 / 4;
+    grid-area: 1 / 2 / 2 / 6;
     font-size: 11px;
-    
+    padding: 30px 0;
 }
 
 #my-work {
-    grid-area: 2 / 1 / 3 / 2;
-    text-align: right;
-    vertical-align: middle;
-    margin: 20px;
-    padding: 20px;
-    border-right: solid;
-    border-right-color: rgb(5, 51, 79);
+    grid-area: 2 / 1 / 6 / 2;
+}
+
+.project {
+    margin: 10px;
+    border: 5px solid darkcyan;
+}
+
+#html-css {
+    grid-area: 2 / 2 / 4 / 6;
+    background: url("html_css_refactor.png") lightgray;
+}
+
+#prework-studyguide {
+    grid-area: 4 / 2 / 5 / 4;
+    background: url("html_css_refactor.png") lightgrey;
+}
+
+#placeholder-1 {
+    grid-area: 4 / 4 / 5 / 6;
+    background: lightgray;
+}
+
+#placeholder-2 {
+    grid-area: 5 / 2 / 6 / 4;
+    background: lightgray;
+}
+
+#placeholder-3 {
+    grid-area: 5 / 4 / 6 / 6;
+    background: lightgray;
 }
 
 #contact-me {
-    grid-area: 3 / 1 / 4 / 2;
-    text-align: right;
-    vertical-align: middle;
-    margin: 20px;
-    padding: 20px;
-    border-right: solid;
-    border-right-color: rgb(5, 51, 79);
+    grid-area: 6 / 1 / 7 / 2;
 }
-
 
 @media screen and (max-width: 768px) {
     main,
