--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,16 +96,25 @@ main {
 .project {
     margin: 10px;
     border: 5px solid darkcyan;
+    
+}
+
+.project h3 {
+    display: inline;
+    border-left: 0px;
+    padding: 4px;  
+    background-color: darkcyan;
+    color: white;
 }
 
 #html-css {
     grid-area: 2 / 2 / 4 / 6;
-    background: url("html_css_refactor.png") lightgray;
+    background: url("../images/html_css_refactor.png"), lightgray;
 }
 
 #prework-studyguide {
     grid-area: 4 / 2 / 5 / 4;
-    background: url("html_css_refactor.png") lightgrey;
+    background: url("../images/prework_study_guide.png"), lightgrey;
 }
 
 #placeholder-1 {
@@ -125,6 +134,19 @@ main {
 
 #contact-me {
     grid-area: 6 / 1 / 7 / 2;
+}
+
+#contact-area {
+    grid-area: 6 / 2 / 7 / 6;
+    padding: 100px 0;
+}
+
+#contact-area a {
+    color: darkcyan;
+    font-weight: bold;
+    padding: 8px;  
+    background-color: darkcyan;
+    color: white;
 }
 
 @media screen and (max-width: 768px) {
